JumpScript/tests/baselines/reference/comparisonOperatorWithNoRelationshipTypeParameter.errors.txt
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(12,14): error TS2365: Operator '<' cannot be applied to types 'T' and 'U'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(13,14): error TS2365: Operator '>' cannot be applied to types 'T' and 'U'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(14,14): error TS2365: Operator '<=' cannot be applied to types 'T' and 'U'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(15,14): error TS2365: Operator '>=' cannot be applied to types 'T' and 'U'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(16,14): error TS2365: Operator '==' cannot be applied to types 'T' and 'U'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(17,14): error TS2365: Operator '!=' cannot be applied to types 'T' and 'U'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(18,14): error TS2365: Operator '===' cannot be applied to types 'T' and 'U'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(19,14): error TS2365: Operator '!==' cannot be applied to types 'T' and 'U'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(22,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'boolean'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(23,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'number'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(24,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'string'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(25,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'void'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(26,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'E'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(27,16): error TS2365: Operator '<' cannot be applied to types 'T' and '{ a: string; }'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(28,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'any[]'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(30,16): error TS2365: Operator '<' cannot be applied to types 'boolean' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(31,16): error TS2365: Operator '<' cannot be applied to types 'number' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(32,16): error TS2365: Operator '<' cannot be applied to types 'string' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(33,16): error TS2365: Operator '<' cannot be applied to types 'void' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(34,16): error TS2365: Operator '<' cannot be applied to types 'E' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(35,16): error TS2365: Operator '<' cannot be applied to types '{ a: string; }' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(36,16): error TS2365: Operator '<' cannot be applied to types 'any[]' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(39,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'boolean'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(40,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'number'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(41,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'string'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(42,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'void'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(43,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'E'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(44,16): error TS2365: Operator '<' cannot be applied to types 'T' and '{ a: string; }'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(45,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'any[]'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(47,16): error TS2365: Operator '<' cannot be applied to types 'boolean' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(48,16): error TS2365: Operator '<' cannot be applied to types 'number' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(49,16): error TS2365: Operator '<' cannot be applied to types 'string' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(50,16): error TS2365: Operator '<' cannot be applied to types 'void' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(51,16): error TS2365: Operator '<' cannot be applied to types 'E' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(52,16): error TS2365: Operator '<' cannot be applied to types '{ a: string; }' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(53,16): error TS2365: Operator '<' cannot be applied to types 'any[]' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(56,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'boolean'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(57,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'number'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(58,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'string'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(59,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'void'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(60,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'E'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(61,16): error TS2365: Operator '<' cannot be applied to types 'T' and '{ a: string; }'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(62,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'any[]'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(64,16): error TS2365: Operator '<' cannot be applied to types 'boolean' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(65,16): error TS2365: Operator '<' cannot be applied to types 'number' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(66,16): error TS2365: Operator '<' cannot be applied to types 'string' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(67,16): error TS2365: Operator '<' cannot be applied to types 'void' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(68,16): error TS2365: Operator '<' cannot be applied to types 'E' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(69,16): error TS2365: Operator '<' cannot be applied to types '{ a: string; }' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(70,16): error TS2365: Operator '<' cannot be applied to types 'any[]' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(73,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'boolean'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(74,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'number'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(75,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'string'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(76,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'void'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(77,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'E'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(78,16): error TS2365: Operator '<' cannot be applied to types 'T' and '{ a: string; }'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(79,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'any[]'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(81,16): error TS2365: Operator '<' cannot be applied to types 'boolean' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(82,16): error TS2365: Operator '<' cannot be applied to types 'number' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(83,16): error TS2365: Operator '<' cannot be applied to types 'string' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(84,16): error TS2365: Operator '<' cannot be applied to types 'void' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(85,16): error TS2365: Operator '<' cannot be applied to types 'E' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(86,16): error TS2365: Operator '<' cannot be applied to types '{ a: string; }' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(87,16): error TS2365: Operator '<' cannot be applied to types 'any[]' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(90,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'boolean'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(91,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'number'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(92,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'string'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(93,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'void'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(94,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'E'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(95,16): error TS2365: Operator '<' cannot be applied to types 'T' and '{ a: string; }'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(96,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'any[]'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(98,16): error TS2365: Operator '<' cannot be applied to types 'boolean' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(99,16): error TS2365: Operator '<' cannot be applied to types 'number' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(100,16): error TS2365: Operator '<' cannot be applied to types 'string' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(101,16): error TS2365: Operator '<' cannot be applied to types 'void' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(102,16): error TS2365: Operator '<' cannot be applied to types 'E' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(103,16): error TS2365: Operator '<' cannot be applied to types '{ a: string; }' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(104,16): error TS2365: Operator '<' cannot be applied to types 'any[]' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(107,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'boolean'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(108,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'number'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(109,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'string'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(110,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'void'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(111,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'E'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(112,16): error TS2365: Operator '<' cannot be applied to types 'T' and '{ a: string; }'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(113,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'any[]'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(115,16): error TS2365: Operator '<' cannot be applied to types 'boolean' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(116,16): error TS2365: Operator '<' cannot be applied to types 'number' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(117,16): error TS2365: Operator '<' cannot be applied to types 'string' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(118,16): error TS2365: Operator '<' cannot be applied to types 'void' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(119,16): error TS2365: Operator '<' cannot be applied to types 'E' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(120,16): error TS2365: Operator '<' cannot be applied to types '{ a: string; }' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(121,16): error TS2365: Operator '<' cannot be applied to types 'any[]' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(124,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'boolean'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(125,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'number'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(126,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'string'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(127,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'void'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(128,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'E'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(129,16): error TS2365: Operator '<' cannot be applied to types 'T' and '{ a: string; }'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(130,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'any[]'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(132,16): error TS2365: Operator '<' cannot be applied to types 'boolean' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(133,16): error TS2365: Operator '<' cannot be applied to types 'number' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(134,16): error TS2365: Operator '<' cannot be applied to types 'string' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(135,16): error TS2365: Operator '<' cannot be applied to types 'void' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(136,16): error TS2365: Operator '<' cannot be applied to types 'E' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(137,16): error TS2365: Operator '<' cannot be applied to types '{ a: string; }' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(138,16): error TS2365: Operator '<' cannot be applied to types 'any[]' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(141,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'boolean'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(142,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'number'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(143,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'string'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(144,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'void'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(145,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'E'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(146,16): error TS2365: Operator '<' cannot be applied to types 'T' and '{ a: string; }'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(147,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'any[]'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(149,16): error TS2365: Operator '<' cannot be applied to types 'boolean' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(150,16): error TS2365: Operator '<' cannot be applied to types 'number' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(151,16): error TS2365: Operator '<' cannot be applied to types 'string' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(152,16): error TS2365: Operator '<' cannot be applied to types 'void' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(153,16): error TS2365: Operator '<' cannot be applied to types 'E' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(154,16): error TS2365: Operator '<' cannot be applied to types '{ a: string; }' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump(155,16): error TS2365: Operator '<' cannot be applied to types 'any[]' and 'T'.


==== tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.jump (120 errors) ====
    enum E { a, b, c }
    
    var a: boolean;
    var b: number;
    var c: string;
    var d: void;
    var e: E;
    var f: { a: string };
    var g: any[];
    
    function foo<T, U>(t: T, u: U) {
        var r1 = t < u;
                 ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'U'.
        var r2 = t > u;
                 ~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'T' and 'U'.
        var r3 = t <= u;
                 ~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'T' and 'U'.
        var r4 = t >= u;
                 ~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'T' and 'U'.
        var r5 = t == u;
                 ~~~~~~
!!! error TS2365: Operator '==' cannot be applied to types 'T' and 'U'.
        var r6 = t != u;
                 ~~~~~~
!!! error TS2365: Operator '!=' cannot be applied to types 'T' and 'U'.
        var r7 = t === u;
                 ~~~~~~~
!!! error TS2365: Operator '===' cannot be applied to types 'T' and 'U'.
        var r8 = t !== u;
                 ~~~~~~~
!!! error TS2365: Operator '!==' cannot be applied to types 'T' and 'U'.
    
        // operator <
        var r1a1 = t < a;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'boolean'.
        var r1a2 = t < b;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'number'.
        var r1a3 = t < c;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'string'.
        var r1a4 = t < d;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'void'.
        var r1a5 = t < e;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'E'.
        var r1a6 = t < f;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and '{ a: string; }'.
        var r1a7 = t < g;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'any[]'.
    
        var r1b1 = a < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'boolean' and 'T'.
        var r1b2 = b < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'number' and 'T'.
        var r1b3 = c < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'string' and 'T'.
        var r1b4 = d < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'void' and 'T'.
        var r1b5 = e < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'E' and 'T'.
        var r1b6 = f < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types '{ a: string; }' and 'T'.
        var r1b7 = g < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'any[]' and 'T'.
    
        // operator >
        var r2a1 = t < a;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'boolean'.
        var r2a2 = t < b;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'number'.
        var r2a3 = t < c;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'string'.
        var r2a4 = t < d;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'void'.
        var r2a5 = t < e;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'E'.
        var r2a6 = t < f;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and '{ a: string; }'.
        var r2a7 = t < g;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'any[]'.
    
        var r2b1 = a < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'boolean' and 'T'.
        var r2b2 = b < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'number' and 'T'.
        var r2b3 = c < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'string' and 'T'.
        var r2b4 = d < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'void' and 'T'.
        var r2b5 = e < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'E' and 'T'.
        var r2b6 = f < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types '{ a: string; }' and 'T'.
        var r2b7 = g < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'any[]' and 'T'.
    
        // operator <=
        var r3a1 = t < a;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'boolean'.
        var r3a2 = t < b;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'number'.
        var r3a3 = t < c;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'string'.
        var r3a4 = t < d;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'void'.
        var r3a5 = t < e;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'E'.
        var r3a6 = t < f;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and '{ a: string; }'.
        var r3a7 = t < g;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'any[]'.
    
        var r3b1 = a < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'boolean' and 'T'.
        var r3b2 = b < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'number' and 'T'.
        var r3b3 = c < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'string' and 'T'.
        var r3b4 = d < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'void' and 'T'.
        var r3b5 = e < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'E' and 'T'.
        var r3b6 = f < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types '{ a: string; }' and 'T'.
        var r3b7 = g < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'any[]' and 'T'.
    
        // operator >=
        var r4a1 = t < a;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'boolean'.
        var r4a2 = t < b;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'number'.
        var r4a3 = t < c;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'string'.
        var r4a4 = t < d;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'void'.
        var r4a5 = t < e;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'E'.
        var r4a6 = t < f;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and '{ a: string; }'.
        var r4a7 = t < g;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'any[]'.
    
        var r4b1 = a < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'boolean' and 'T'.
        var r4b2 = b < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'number' and 'T'.
        var r4b3 = c < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'string' and 'T'.
        var r4b4 = d < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'void' and 'T'.
        var r4b5 = e < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'E' and 'T'.
        var r4b6 = f < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types '{ a: string; }' and 'T'.
        var r4b7 = g < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'any[]' and 'T'.
    
        // operator ==
        var r5a1 = t < a;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'boolean'.
        var r5a2 = t < b;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'number'.
        var r5a3 = t < c;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'string'.
        var r5a4 = t < d;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'void'.
        var r5a5 = t < e;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'E'.
        var r5a6 = t < f;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and '{ a: string; }'.
        var r5a7 = t < g;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'any[]'.
    
        var r5b1 = a < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'boolean' and 'T'.
        var r5b2 = b < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'number' and 'T'.
        var r5b3 = c < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'string' and 'T'.
        var r5b4 = d < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'void' and 'T'.
        var r5b5 = e < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'E' and 'T'.
        var r5b6 = f < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types '{ a: string; }' and 'T'.
        var r5b7 = g < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'any[]' and 'T'.
    
        // operator !=
        var r6a1 = t < a;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'boolean'.
        var r6a2 = t < b;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'number'.
        var r6a3 = t < c;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'string'.
        var r6a4 = t < d;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'void'.
        var r6a5 = t < e;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'E'.
        var r6a6 = t < f;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and '{ a: string; }'.
        var r6a7 = t < g;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'any[]'.
    
        var r6b1 = a < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'boolean' and 'T'.
        var r6b2 = b < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'number' and 'T'.
        var r6b3 = c < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'string' and 'T'.
        var r6b4 = d < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'void' and 'T'.
        var r6b5 = e < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'E' and 'T'.
        var r6b6 = f < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types '{ a: string; }' and 'T'.
        var r6b7 = g < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'any[]' and 'T'.
    
        // operator ===
        var r7a1 = t < a;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'boolean'.
        var r7a2 = t < b;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'number'.
        var r7a3 = t < c;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'string'.
        var r7a4 = t < d;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'void'.
        var r7a5 = t < e;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'E'.
        var r7a6 = t < f;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and '{ a: string; }'.
        var r7a7 = t < g;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'any[]'.
    
        var r7b1 = a < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'boolean' and 'T'.
        var r7b2 = b < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'number' and 'T'.
        var r7b3 = c < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'string' and 'T'.
        var r7b4 = d < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'void' and 'T'.
        var r7b5 = e < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'E' and 'T'.
        var r7b6 = f < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types '{ a: string; }' and 'T'.
        var r7b7 = g < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'any[]' and 'T'.
    
        // operator !==
        var r8a1 = t < a;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'boolean'.
        var r8a2 = t < b;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'number'.
        var r8a3 = t < c;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'string'.
        var r8a4 = t < d;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'void'.
        var r8a5 = t < e;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'E'.
        var r8a6 = t < f;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and '{ a: string; }'.
        var r8a7 = t < g;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'any[]'.
    
        var r8b1 = a < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'boolean' and 'T'.
        var r8b2 = b < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'number' and 'T'.
        var r8b3 = c < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'string' and 'T'.
        var r8b4 = d < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'void' and 'T'.
        var r8b5 = e < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'E' and 'T'.
        var r8b6 = f < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types '{ a: string; }' and 'T'.
        var r8b7 = g < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'any[]' and 'T'.
    }